--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <p>Ejercicio 1: <a href="./ud4/sumatorio_vectores.html">sumatorio de vectores</a></p>
     <p>Ejercicio 2: <a href="./ud4/pares_impares.html">pares e impares</a></p>
     <p>Ejercicio 2: <a href="./ud4/raton.html">cambio de color</a></p>
+    <p>Ejercicio 3: <a href="./ud4/calculadora.html">Calculadora</a></p>
+    <p>Ejercicio 3: <a href="./ud4/BuscadorCoches/BuscadorCoches.html">Buscador de Coches</a></p>
 
 
     <!--<div class="iframe-container">
