--- a/ud4/BuscadorCoches/BuscadorCoches.html
+++ b/ud4/BuscadorCoches/BuscadorCoches.html
@@ -52,7 +52,7 @@
         <!-- Campo para ingresar el precio máximo -->
         <div>
             <label for="precio">Precio máximo (€):</label>
-            <input type="number" id="precio" name="precio" min="0" step="100" placeholder="Ej: 30000">
+            <input type="number" id="precio" name="precio" min="0" placeholder="Ej: 30000">
         </div>
         
         <!-- Selección de equipamiento adicional -->
