--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <p>Ejercicio 3: <a href="./ud4/BuscadorCoches/BuscadorCoches.html">Buscador de Coches</a></p>
     <p>Ejercicio 4: <a href="./ud4/matriculaColegio/matriculas.html">Matricula de colegio</a></p>
 
-    <h3>Tema4: JS</h3>
+    <h3>Tema5: Alamcenamiento y consulta</h3>
     <p>Ejercicio 1: <a href="./ud5/nota.html">Calculo nota</a></p>
     <!--<div class="iframe-container">
         <div class="iframe-title">Wikipedia</div>
